--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.13",
+    "@hotwired/stimulus-webpack-helpers": "^1.0.0",
     "@rails/actiontext": "^8.0.200",
     "@tailwindcss/cli": "^4.1.6",
     "@tailwindcss/forms": "^0.5.10",
